--- a/style.css
+++ b/style.css
@@ -23,6 +23,9 @@ body{
     background: var(--text-color);
     color: var(--bg-color);
 }
+section{
+    padding: 4.5rem 0 1.5rem;
+}
 header{
     position: fixed;
     width: 100%;
@@ -95,3 +98,79 @@ header{
 .btn:hover{
     background-color: #fa1216;
 }
+
+.conatiner{
+    width: 100%;
+    min-height: 640px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    background: rgb(2, 3, 7, 0,4);
+}
+
+.conatiner img{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    z-index: -1;
+    
+}
+
+.swiper-pagination-bullet{
+    width: 6px !important;
+    height: 6px !important;
+    border: o.2rem !important;
+    background: var(--bg-color) !important;
+    opacity: 1 !important;
+}
+
+.swiper-pagination-bullet-active{
+    width: 1.5rem !important;
+    background: var(--main-color) !important;
+}
+
+.home-text {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%); 
+    text-align: left;
+    z-index: 1000;
+    padding: 0 150px;
+  }
+
+  .home-text span{
+    color: var(--bg-color);
+    font-weight: 500;
+    text-transform: uppercase;
+  }
+
+  .home-text h1{
+    color: var(--bg-color);
+    font-size: 4rem;
+    font-weight: 700;
+    margin-bottom: 1rem;
+  }
+
+  .play{
+    position: absolute;
+    right: 4rem;
+    bottom: 10%;
+  }
+
+  .play .bx{
+    background: var(--bg-color);
+    padding: 10px;
+    font-size: 2rem;
+    border-radius: 50%;
+    border: 4px solid rgb(2, 3, 7, 0,4);
+    color: var(--main-color);
+  }
+
+  .play .bx:hover{
+    background: var(--main-color);
+    color: var(--bg-color);
+    transition: 0.2s all linear;
+  }
