--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ header{
 .swiper-pagination-bullet{
     width: 6px !important;
     height: 6px !important;
-    border: o.2rem !important;
+    border-radius: o.2rem !important;
     background: var(--bg-color) !important;
     opacity: 1 !important;
 }
@@ -173,4 +173,47 @@ header{
     background: var(--main-color);
     color: var(--bg-color);
     transition: 0.2s all linear;
+  }
+
+  .heading{
+    max-width: 968px;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    border-bottom: 1px solid var(--main-color);
+  }
+
+  .movies-container{
+    max-width: 968px;
+    margin-right: auto;
+    margin-left: auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(180px,auto));
+    gap: 1rem;
+    margin-top: 2rem;
+  }
+
+  .box .box-img{
+    width: 100%;
+    height: 270px;
+  }
+  .box .box-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .box .box-img img:hover{
+    transform: translateY(-10px);
+    transition: 0.2 all linear;
+  }
+
+  .box h3{
+    font-size: 0.9rem;
+    font-weight: 500;
+  }
+
+  .box span{
+    font-size: 13px;
   }
