--- a/style.css
+++ b/style.css
@@ -198,6 +198,7 @@ header{
     width: 100%;
     height: 270px;
   }
+  
   .box .box-img img{
     width: 100%;
     height: 100%;
@@ -217,3 +218,18 @@ header{
   .box span{
     font-size: 13px;
   }
+  
+  .coming-container{
+    display: grid;
+    gap: 1rem;
+    max-width: 968px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2rem;
+  }
+
+  .coming-container box{
+    transform: translateY(0);
+  }
+  
+  
